working on fixing the overlapping contact field on Safari mobile

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -2389,6 +2389,7 @@ width: 100%;
 
 /* _____________________________ Contact Field _____________________________ */
 #contactFieldMainContainer {
+  display: block;
   min-height: 310px;
   min-width: 310px;
   width: 400px;
